# ANITA/python/api/endpoints/trend_analysis/markets.py
@@ -60,11 +60,25 @@ def load_dump(market):
         logger.debug("Endpoint Load dump - END")
         return Response(json.dumps(error_content), status=404, mimetype="application/json")
 
+    try:
+        status, content = markets.load_dump(market, market_zip, timestamp)
+    except Exception as e:
+        logger.error("Internal server error")
+        logger.error(str(e))
+        logger.error(traceback.format_exc())
+        logger.info("Endpoint Load dump - END")
+        error_content = {"error": "Internal server error", "msg": str(e), "traceback": traceback.format_exc()}
+        return Response(json.dumps(error_content), status=500, mimetype="application/json")
 
-
-    logger.info("Endpoint Load dump - START")
-    return Response(None, status=200, mimetype="application/json")
+    logger.info("Endpoint Load dump - END")
+    return Response(json.dumps(content), status=202, mimetype="application/json")
 
 
 def delete_dumps(market):
     return Response(json.dumps({"msg": "NOT IMPLEMENTED YET"}), status=500, mimetype="application/json")
+
+
+def status():
+    logger.info("Endpoint Market Load Status - START")
+    logger.info("Endpoint Market Load Status - END")
+    return Response(None, status=200, mimetype="application/json")
